--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -26,15 +26,16 @@
   padding-right: 40px;
   padding-top: 16px;
   padding-bottom: 16px;
-  border: 2px solid black;
+  border: 1.5px solid black;
   background-color: white;
-  box-shadow: 0.5px 1px;
-  /* transition: transform .2s; */
+  box-shadow: 0px 3px 8px 0.5px #888;
+  transition: transform .2s;
+  color: rgb(41, 41, 41);
 }
 
-/* .button:hover {
-  transform: scale(1.5);
-} */
+.button:hover {
+  transform: scale(1.08);
+}
 
 .photo-container {
   /* max-width: 50px;
@@ -57,6 +58,7 @@
   font-weight: 500;
 }
 
-a {
-  text-decoration: none;
+a:hover, a:visited, a:link, a:active
+{
+    text-decoration: none;
 }
