--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,42 +1,37 @@
-/* .about-page {
-  display: flex;
-  width: 100vw;
-  height: 100vh;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: #FDF5E6;
-  animation: fadein 2s;
-  -webkit-animation: fadein 2s;
-}
-
-@keyframes fadein {
-  from {
-      opacity:0;
-  }
-  to {
-      opacity:1;
-  }
-} */
-
 .about-page {
   display: flex;
   width: 100vw;
-  height: 100vh;
+  height: calc(100vh - 40px);
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: #FDF5E6;
-    /* -webkit-animation: fadein 2s;
-            animation: fadein 2s; */
 }
 
-/* @keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+.white-container {
+  background-color: #eff2f7;
+  width: 80vw;
+  height: 85vh;
+  position: relative;
+  border-radius: 7px;
+  border: 1.5px solid rgb(216, 214, 214);
+  box-shadow: 0px 3px 8px 0.5px rgb(184, 177, 177);
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  /* align-items: flex-start; */
 }
 
-@-webkit-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
-} */
+.about-title {
+  font-size: 65px;
+  font-weight: 650;
+  /* margin: top right bottom left */
+  margin: 30px 0 30px 70px
+}
+
+.description-container {
+  margin: 0 64px 0 64px;
+  border: 2.0px solid rgb(207, 185, 185);
+  padding: 10px;
+  border-radius: 4px;
+}
