--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -3,19 +3,18 @@
   flex-direction: row;
   justify-content: flex-end;
   width: 100%;
-  float: left;
-  margin: 0 0 0em 0;
-  padding: 0;
-  list-style: none;
   background-color:#FDF5E6;
-
 }
 
 .navbar-link {
-  display: block;
+  /* display: block; */
   padding: 8px 15px;
   text-decoration: none;
   font-weight: bold;
   color: #069;
   border-right: 1px solid #ccc;
+}
+
+a:hover .navbar-link{
+  color: rgb(28, 192, 221);
 }
