--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -1,7 +1,7 @@
 .projects-page{
   display: flex;
   width: 100vw;
-  height: 100vh;
+  height: calc(100vh - 40px);
   flex-direction: column;
   justify-content: center; /*centers items on the line (the x-axis by default)*/
   align-items: center; /*centers items on the cross-axis (y by default)*/
