Added on hover effect to about page; note: pdf does not appear to be loading in when deploying site. Will need to figure out how to embed resume or host it elsewhere

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -48,7 +48,6 @@
 }
 
 .resume-container {
-  width: 70vw;
   display: flex;
   justify-content: center;
 }
@@ -56,4 +55,8 @@
 .pdf-image {
   width: 120px;
   height: 120px;
+}
+
+.pdf-image:hover {
+  transform: scale(1.05);
 }
