--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -23,11 +23,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  
 }
 
 .right-side {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
 }
 
 .content-container {
@@ -35,10 +37,27 @@
   flex-direction: row;
   width: 50vw;
   height: 50vh;
-  border: 1px solid;
+  /* border: 1px solid; */
+  justify-content: space-between;
 }
 
 .contact-text {
-  font-size: 65px;
+  font-size: 80px;
   font-weight: 600;
+}
+
+.titles {
+  font-size: 30px;
+  font-weight: 700;
+  color:  rgb(47, 76, 119);
+}
+
+.titles-and-information-phone {
+  margin-bottom: 50px;
+  margin-top: 50px;
+}
+
+.information {
+  font-size: 20px;
+  font-weight: bold;
 }
