--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -35,7 +35,7 @@
 .content-container {
   display: flex;
   flex-direction: row;
-  width: 50vw;
+  width: 750px;
   height: 50vh;
   /* border: 1px solid; */
   justify-content: space-between;
