--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -44,13 +44,13 @@
 }
 
 .personal-photo {
-  width: 14vw;
+  width: 250px;
   height: auto;
   border-radius: 50%;
 }
 
 .name-container {
-  width: 30vw;
+  width: 400px;
   display: flex;
   font-size: 48px;
   justify-content: center;
