Adding high resolution image version of my resume. Couldn't get the pdf embedding to work with the deployed link.

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -9,7 +9,7 @@
 }
 
 .white-container {
-  background-color: #eff2f7;
+  background-color: #ffffff;
   width: 80vw;
   height: 85vh;
   position: relative;
@@ -53,8 +53,8 @@
 }
 
 .pdf-image {
-  width: 120px;
-  height: 120px;
+  width: 100px;
+  height: 100px;
 }
 
 .pdf-image:hover {
