--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -61,3 +61,16 @@
   font-size: 20px;
   font-weight: bold;
 }
+
+a:hover, a:visited, a:link, a:active
+{
+    text-decoration: none;
+    color:  rgb(47, 76, 119);
+}
+
+.information-clickable {
+  font-size: 20px;
+  font-weight: bold;
+  color: black;
+  text-decoration: none;
+}
