--- a/src/Components/Resume/Resume.css
+++ b/src/Components/Resume/Resume.css
@@ -1,4 +1,4 @@
-.projects-page{
+.resume-page{
   display: flex;
   width: 100vw;
   height: calc(100vh - 40px);
@@ -6,9 +6,4 @@
   justify-content: center; /*centers items on the line (the x-axis by default)*/
   align-items: center; /*centers items on the cross-axis (y by default)*/
   background-color: #FDF5E6;
-}
-
-.resume-image {
-  width: auto;
-  height: 90vh;
 }
