--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -1,4 +1,4 @@
-.projects-page{
+.projects-page {
   display: flex;
   width: 100vw;
   height: calc(100vh - 40px);
@@ -11,4 +11,132 @@
 .resume-image {
   width: auto;
   height: 90vh;
+}
+
+.all-projects-container {
+  width: 70vw;
+  height: auto;
+  background-color:  #FDF5E6;
+}
+
+.single-project-container {
+  width: 70vw;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 3px 8px 0.5px rgb(184, 177, 177);
+}
+
+.project-title {
+  font-size: 24px;
+  font-weight: 650;
+  margin-left: 10px;
+}
+
+.project-title-container {
+  background-color: rgb(216, 236, 168);
+}
+
+.carousel-div {
+  display: flex;
+  justify-content: center;
+  /* align-content: center; */
+  height: 200px;
+  width: 200px;
+}
+
+.links-div {
+  display: flex;
+  justify-content: center;
+}
+
+.description-technologies-container {
+  display: flex;
+  flex-direction: column;
+  width: 70vw;
+}
+
+.links-div {
+  margin: 5px;
+}
+
+.description-header-and-content {
+  display: flex;
+}
+
+.technologies-header-and-content {
+  display: flex;
+}
+
+.description-header {
+  margin: 5px;
+  width: 140px;
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.technologies-header {
+  margin: 5px;
+  width: 210px;
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.description-content {
+  margin-bottom: 5px;
+  margin-right: 5px;
+  margin-left: 5px;
+  margin-top: 11px;
+  width: calc(70vw - 140px);
+}
+
+.technologies-content {
+  margin-bottom: 5px;
+  margin-right: 5px;
+  margin-left: 5px;
+  margin-top: 11px;
+  width: calc(70vw - 210px);
+}
+
+.link-icon {
+  height: 20px;
+  width: auto;
+}
+
+.github-link-div {
+  margin-top: 5px;
+  margin-right: 15px;
+  margin-bottom: 5px;
+}
+
+.deployed-link-div {
+  margin-top: 5px;
+  margin-left: 15px;
+  margin-bottom: 5px;
+}
+
+.github-link-div:hover {
+  transform: scale(1.05);
+}
+
+.deployed-link-div:hover {
+  transform: scale(1.05);
+}
+
+a:hover, a:visited, a:link, a:active
+{
+    text-decoration: none;
+}
+
+.carousel-div {
+  margin: 5px;
+  width: 70vw;
+  height: auto;
+}
+
+.carousel-container {
+  display: flex;
+  justify-content: center;
+  width: 200px;
+  height: 200px;
 }
