--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -1,22 +1,18 @@
 .projects-page {
   display: flex;
-  width: 100vw;
-  height: calc(100vh - 40px);
+  width: auto;
+  height: auto;
   flex-direction: column;
-  justify-content: center; /*centers items on the line (the x-axis by default)*/
+  justify-content: flex-start; /*centers items on the line (the x-axis by default)*/
   align-items: center; /*centers items on the cross-axis (y by default)*/
   background-color: #FDF5E6;
-}
-
-.resume-image {
-  width: auto;
-  height: 90vh;
 }
 
 .all-projects-container {
   width: 70vw;
   height: auto;
   background-color:  #FDF5E6;
+  margin-top: 40px;
 }
 
 .single-project-container {
@@ -25,6 +21,7 @@
   display: flex;
   flex-direction: column;
   box-shadow: 0px 3px 8px 0.5px rgb(184, 177, 177);
+  margin-bottom: 40px;
 }
 
 .project-title {
